--- a/toppage/toppage.css
+++ b/toppage/toppage.css
@@ -6,14 +6,30 @@ li{
 }
 header {
     display: flex;
-    background-color: #E4CE06;
+    position: fixed;
+    background-color: #67b4cd;
     width: 100%;
     height: 50px;
+    z-index: 1000;
+    padding-bottom: 10px;
+    
+}
+header div{
+  position: absolute;
+  width: 100px;
+  top: 1px;
+  left: 1px;
 }
 header p{
     margin-right: 15px;
     margin-top: auto;
     margin-bottom: auto;
+    width: 50px;
+}
+input{
+
+  width: 100px;
+  /* アイコンと同じサイズ */
 }
 label {
     width: 30px;
@@ -22,7 +38,8 @@ label {
     position: absolute;
     right:9px;
     top: 11px;
-    z-index: 1000;
+    z-index: 1500;
+  
     }
 
 span {
@@ -32,7 +49,7 @@ span {
     position: absolute;
     right: 15px;
     transition: .3s;
-    z-index: 100;
+    z-index: 1500;
 }
 
 .hum1 {
@@ -72,9 +89,9 @@ ul {
     height: 100vh;
     right: -100%;
     text-align: center;
-    background-color: #E4CE06;
+    background-color: #92c2d2;
     transition: 2s;
-    z-index: 100;
+    z-index: 1500;
   
 
 }
@@ -82,22 +99,19 @@ ul {
 li {
     text-align: center;
     margin-top: 30px;
+    z-index: 1500;
 }
 
 #confirm:checked ~ ul {
     right:0 ;
+    z-index: 1000;
 }
 
 
-
-
-header{
-  
+.title img{
+  margin-top: 50px;
 }
-.header-containar{
 
-
-}
 .tikuzenni{
   margin-left: 10px;
   font-size: 120px;
@@ -106,31 +120,31 @@ header{
 
 
 .swiper{
-  z-index: 5;
+  z-index: 500;
   position: relative;
   margin-bottom: 80px;
 }
 .swiper-wrapper{
   position: relative;
-  z-index: 5;
+  z-index: 500;
 }
 .swiper-slide{
   position: relative;
-  z-index: 5;
+  z-index: 500;
   margin-bottom: 30px;
 }
 .swiper img{
-  z-index: 5;
+  z-index: 500;
+  border-top: 50px;
+  position: relative;
   
 }
 
+
 main{
-  background-color: #008fbc;
   padding-bottom: 30px;
 }
-h3{
-  color:azure
-}
+
 .img{
   text-align: center;
   width: 100%;
@@ -147,7 +161,7 @@ h3{
 
 }
 .reasonText{
-background-color: #E4CE06;
+background-color: #92c2d2;
 border-radius: 10%;
 text-align: center;
 margin: 0 auto;
@@ -155,6 +169,7 @@ margin-left: 10px;
 margin-right: 10px;
 margin-bottom: 40px;
 display: inline-block;
+padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
 }
@@ -162,23 +177,28 @@ padding-right: 10px;
   padding-bottom: 10px;
 }
 .asobikataText{
-  background-color: #E4CE06;
+  background-color: #92c2d2;
   border-radius: 10%;
   text-align: center;
   margin: 0 auto;
   margin-left: 10px;
 margin-right: 10px;
 margin-bottom: 40px;
+padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
 }
 .swiper{
   width:100%;
-  height: ;
+
 }
 footer{
-  background-color: #E4E4E0;
+  background-color: lightgray;
+  padding-top: 10px;
+  padding-bottom: 10px; 
+
+}
+footer div{
   text-align: center;
   margin: 0 auto;
-  padding-top: 10px;
 }
