クイズページ１

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,12 +1,24 @@
+body{
+    width:auto;
+    background-color: #fff;
+}
+.main{
+    text-align:center;
+}
+.main img{
+    width: 50%;
+    height: 300px;
+}
 .container{
-    width: 200px;
-    height: 200px;
-    margin: 10px auto;
-    background-color: yellow;
+    font-size: 20px;
+}
+.container p{
+    text-align: center;
 }
 
 #question{
-    color: white;
+    color: #0000;
+    background-color: #ffff;
 }
 
 #choices{
