大枠できました

--- a/toppage/toppage.css
+++ b/toppage/toppage.css
@@ -17,8 +17,8 @@ header {
 header div{
   position: absolute;
   width: 100px;
-  top: 1px;
-  left: 1px;
+  /* top: 1px;
+  left: 1px; */
 }
 header p{
     margin-right: 15px;
@@ -107,9 +107,16 @@ li {
     z-index: 1000;
 }
 
+title{
+  text-align: center;
+  
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .title img{
   margin-top: 50px;
+
 }
 
 .tikuzenni{
@@ -120,24 +127,25 @@ li {
 
 
 .swiper{
+  width: 100%;
+  height: auto;
   z-index: 500;
   position: relative;
   margin-bottom: 80px;
-}
-.swiper-wrapper{
-  position: relative;
-  z-index: 500;
-}
+  }
+
 .swiper-slide{
   position: relative;
   z-index: 500;
   margin-bottom: 30px;
+
 }
 .swiper img{
   z-index: 500;
   border-top: 50px;
   position: relative;
-  
+  border-radius: 50%;
+
 }
 
 
@@ -147,8 +155,30 @@ main{
 
 .img{
   text-align: center;
-  width: 100%;
 }
+h3{
+  text-align: center;
+  margin: 0 auto;
+  color: white;
+  margin: 10px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.strong{
+  color: white;
+  font-weight: bold;
+  
+}
+.strong-r{
+  color: white;
+  text-align: center;
+}
+.blackstrong{
+
+  font-weight: bold;
+}
+
+
 .reason{
 
 }
@@ -162,8 +192,7 @@ main{
 }
 .reasonText{
 background-color: #92c2d2;
-border-radius: 10%;
-text-align: center;
+border-radius: 8%;
 margin: 0 auto;
 margin-left: 10px;
 margin-right: 10px;
@@ -172,6 +201,11 @@ display: inline-block;
 padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
+font-size: 20px;
+}
+.reasonText p{
+  text-align-last: left;
+
 }
 .asobikata{
   padding-bottom: 10px;
@@ -187,11 +221,15 @@ margin-bottom: 40px;
 padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
-}
-.swiper{
-  width:100%;
 
 }
+.asobikataText p{
+  text-align-last: left;
+  font-size: 20px;
+
+}
+
+
 footer{
   background-color: lightgray;
   padding-top: 10px;
