--- a/toppage/toppage pc.css
+++ b/toppage/toppage pc.css
@@ -14,18 +14,26 @@ header {
     padding-bottom: 10px;
     
 }
+@media screen and (min-width: 480px){
+  header{
+    height: 60px;
+  }
+
 header div{
   position: absolute;
   width: 100px;
   /* top: 1px;
   left: 1px; */
 }
+
+
 header p{
     margin-right: 15px;
-    margin-top: auto;
     margin-bottom: auto;
     width: 50px;
+    
 }
+
 input{
 
   width: 100px;
@@ -112,11 +120,22 @@ title{
   
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 .title img{
-  margin-top: 50px;
+  margin-top: 60px;
 
+}
+@media screen and (min-width: 480px){
+  .title img{
+    width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+
+  }
 }
 
 .tikuzenni{
@@ -132,6 +151,12 @@ title{
   z-index: 500;
   position: relative;
   margin-bottom: 80px;
+  }
+  @media screen and (min-width: 480px){
+    .swiper{
+      width: 800px;
+  
+    }
   }
 
 .swiper-slide{
@@ -169,6 +194,10 @@ h3{
   font-weight: bold;
   
 }
+@media screen and (min-width: 480px){
+  .strong{
+    text-align-last: center;
+  }
 .strong-r{
   color: white;
   text-align: center;
@@ -176,10 +205,18 @@ h3{
 .blackstrong{
 
   font-weight: bold;
+  
 }
+@media screen and (min-width: 480px){
+  .blackstrong{
+    text-align-last: center;
+  }
 
 
 .reason{
+  margin-left: auto ;
+  margin-right: auto;
+  width: 100%;
 
 }
 
@@ -191,17 +228,37 @@ margin: 0 auto;
 margin-left: 10px;
 margin-right: 10px;
 margin-bottom: 40px;
-display: inline-block;
+display: block;
 padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
 padding-bottom: 30px;
 font-size: 20px;
 }
+@media screen and (min-width: 480px){
+  .reasonText{
+    width: 50%;
+    margin-left: auto;
+margin-right: auto;
+    text-align-last: center;
+  }
+
+  }
+
 .reasonText p{
   text-align-last: left;
 
 }
+@media screen and (min-width: 480px){
+      .reasonText p{
+        text-align-last: center;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+
+
+
+
 .reasonText div{
   text-align: center;
   margin-left: auto;
@@ -230,12 +287,36 @@ padding-left: 10px;
 padding-right: 10px;
 padding-bottom: 30px;
 
+
 }
+@media screen and (min-width: 480px){
+  .asobikataText{
+    width: 50%;
+    margin-left: auto;
+margin-right: auto;
+    text-align-last: center;
+  }
+  }
+}
+@media screen and (min-width: 480px){
+  .asobikataText{
+    padding-bottom: 40px;
+    margin-top: 40px;
+  }
+
+
 .asobikataText p{
   text-align-last: left;
   font-size: 20px;
 
 }
+@media screen and (min-width: 480px){
+  .asobikataText p{
+    text-align-last: center;
+    margin-left: 20px;
+    margin-right: 20px;
+
+  }
 
 
 footer{
