--- a/generater/generater_start/quiz1_.css
+++ b/generater/generater_start/quiz1_.css
@@ -1,5 +1,5 @@
-/* header */
 @charset "utf-8";
+
 ul,
 li{
     list-style: none;
@@ -17,8 +17,8 @@ header {
 header div{
   position: absolute;
   width: 100px;
-  top: 1px;
-  left: 1px;
+  /* top: 1px;
+  left: 1px; */
 }
 header p{
     margin-right: 15px;
@@ -108,91 +108,50 @@ li {
 }
 
 
-.title img{
-  margin-top: 50px;
+body{
+    width:auto;
+    background-color: #fff;
 }
-
-.tikuzenni{
-  margin-left: 10px;
-  font-size: 120px;
+.main{
+    text-align:center;
 }
-main{
-  /* background-color: gray; */
-  padding-top: 50px;
+.main img{
+    /* width: 50%; */
+    margin-top: 40px;
+    width: 370px;
+    height: 300px;
+    object-fit: cover;
 }
-
-/* ここまでヘッダーとハンバーガーメニュー */
-
-
-/* 以下ジェネレータ */
-
-.kotoGenerator {
-  padding:80px 40px 0px 40px;
-  height: 250px;
-  /* background-color: #6b8891; */
-  font-size: 16px;
-  font-weight: bold;
-  font-family: Arial, sans-serif;
+.container{
+    font-size: 20px;
 }
-
-.panelBox {
-  width: 240px;
-  /* background-color: #67cd86; */
-  padding-left: 20px;
-  border-radius: 50% ;
-
+.container p{
+    text-align: center;
 }
-.kotoGenerator img {
-  width: 240px;
-  height: 240px;
-  object-fit: cover;
-  border-radius: 60%;
-  border: solid 10px #67b4cd;
-}
-
-.stopButton {
-  margin: 0 auto;
-  margin-top: 20px;
-  padding-top: 15px;
-  text-align: center;
-  cursor: pointer;
-  width: 90px;
-  height: 32px;
-  background-color:#92c2d2 ;
-  border-radius: 50px;
-  box-shadow: 0 4px 0 #78a3b1 ;
-  user-select: none;
-}
-
-#startButton {
-  cursor: pointer;
-  width :130px;
-  height: 40px;
-  background-color: #d9c634 ; 
-  box-shadow: 0 4px 0 #b4a32a;
-  margin: 0 auto;
-  border-radius: 16px;
-  margin-top: 100px;
-  padding-top: 10px;
-  margin-bottom: 60px;
-  text-align: center;
-  z-index: 1000;
+.main button{
+    background-color:#92c2d2 ;
+    text-align: center;
+    width: 200px;
+    height: 70px;
+    border-radius: 100vh;
+    margin-top: 100px;
+    font-size: large;
 
 }
 
-.inactive {
-  opacity: 0.5;
+.main button:hover{
+    color: #fff;
+    cursor: pointer;
 }
 
-
-/* ここからフッター */
-footer{
-  background-color: lightgray;
-  padding-top: 10px;
-  padding-bottom: 10px; 
+footer {
+    background-color: lightgray;
+    padding-top: 100px;
+    padding-bottom: 10px;
 
 }
-footer div{
-  text-align: center;
-  margin: 0 auto;
+
+footer div {
+    text-align: center;
+    margin: 0 auto;
 }
