--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -17,16 +17,6 @@ body{
     text-align: center;
 }
 
-#question{
-    color: #0000;
-    background-color: #ffff;
-=========
-body {
-    background: #efdec1;
-    font-size: 14px;
-    font-family: Verdana, sans-serif;
-}
-
 .container {
     width: 400px;
     margin: 8px auto;
@@ -38,20 +28,21 @@ body {
 
 #question {
     margin-bottom: 16px;
-    font-weight: bold;
 }
 
 #choices {
     list-style: none;
     padding: 0;
-    margin-bottom: 16px;
+    margin: 100px auto;
+
 }
 
 #choices > li {
     border: 1px solid #ccc;
     border-radius: 4px;
-    padding: 10px;
-    margin-bottom: 10px;
+    text-align: center;
+    padding: 20px 40px;
+    margin-bottom: 50px;
     cursor: pointer;
 }
 
@@ -73,7 +64,7 @@ body {
 #choices > li.wrong {
     background: #f8d8da;
     border-color: #f5c6cb;
-    color: #721c24;
+    color: #00a048;
     font-weight: bold;
 }
 
@@ -81,20 +72,26 @@ body {
     content: ' ... wrong!';
 }
 
-#btn, #result > a {
-    background: #3498db;
-    padding: 8px;
-    border-radius: 4px;
-    cursor: pointer;
+#btn{
+    background-color:#92c2d2 ;
     text-align: center;
-    color: #fff;
-    box-shadow: 0 4px 0 #2880b9;
+    width: 200px;
+    height: 70px;
+    border-radius: 100vh;
+    font-size: large;
+    display: block;
+    margin:0 auto;
+}
+#btn, #result > a {
+    cursor: pointer;
+    color: #000;
 }
 
 #btn.disabled {
     background: #ccc;
     box-shadow: 0 4px 0 #bbb;
     opacity: 0.7;
+
 }
 
 #result {
@@ -102,11 +99,9 @@ body {
     width: 300px;
     background: #fff;
     padding: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     top: 50px;
     left: 0;
     right: 0;
-    margin: 0 auto;
     border-radius: 4px;
     text-align: center;
     transition: 0.4s;
