--- a/toppage/toppage pc.css
+++ b/toppage/toppage pc.css
@@ -18,6 +18,7 @@ header {
   header{
     height: 60px;
   }
+}
 
 header div{
   position: absolute;
@@ -108,6 +109,11 @@ li {
     text-align: center;
     margin-top: 30px;
     z-index: 1500;
+}
+
+li>a{
+  text-decoration: none;
+  color: white;
 }
 
 #confirm:checked ~ ul {
