--- a/generater/generater_start/geneStart.css
+++ b/generater/generater_start/geneStart.css
@@ -15,9 +15,9 @@ header {
     
 }
 header div{
-  position: absolute;
-  width: 100px;
-  /* top: 1px;
+    position: absolute;
+    width: 100px;
+    /* top: 1px;
   left: 1px; */
 }
 header p{
@@ -92,6 +92,7 @@ ul {
     background-color: #92c2d2;
     transition: 2s;
     z-index: 1500;
+    padding-top: 50px;
   
 
 }
@@ -100,6 +101,12 @@ li {
     text-align: center;
     margin-top: 30px;
     z-index: 1500;
+    
+}
+
+li>a{
+    text-decoration: none;
+    color: white;
 }
 
 #confirm:checked ~ ul {
@@ -107,7 +114,14 @@ li {
     z-index: 1000;
 }
 
+.title img{     
+    margin-top: 50px;
+}
 
+.tikuzenni{
+    margin-left: 10px;
+    font-size: 120px;
+}
 body{
     width:auto;
     background-color: #fff;
