--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,3 +1,118 @@
+ul,
+li{
+    list-style: none;
+}
+header {
+    display: flex;
+    position: fixed;
+    background-color: #67b4cd;
+    width: 100%;
+    height: 50px;
+    z-index: 1000;
+    padding-bottom: 10px;
+    
+}
+header div{
+    position: absolute;
+    width: 100px;
+    /* top: 1px;
+  left: 1px; */
+}
+header p{
+    margin-right: 15px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50px;
+}
+input{
+
+  width: 100px;
+  /* アイコンと同じサイズ */
+}
+label {
+    width: 30px;
+    height: 30px;
+    border: 1px solid  black;
+    position: absolute;
+    right:9px;
+    top: 11px;
+    z-index: 1500;
+  
+    }
+
+span {
+    width: 20px;
+    height: 1px;
+    background-color: black;
+    position: absolute;
+    right: 15px;
+    transition: .3s;
+    z-index: 1500;
+}
+
+.hum1 {
+    top: 20px;
+}
+.hum2 { 
+    top: 27px;
+}
+
+.hum3 {
+    top: 34px;
+}
+
+  /* クリックしたらばつ印になるようにする */
+#confirm:checked ~ .hum1 {
+    width: 27px;
+    transform: rotate(45deg);
+    top :27px;
+    right: 12px;
+}
+#confirm:checked ~ .hum2 {
+    display: none;
+}
+#confirm:checked ~ .hum3 {
+    width: 27px;
+    transform: rotate(-45deg);
+    top :27px;
+    right: 12px;
+}
+
+#confirm {
+    display: none;
+}
+ul {
+    position: absolute;
+    width: 30%;
+    height: 100vh;
+    right: -100%;
+    text-align: center;
+    background-color: #92c2d2;
+    transition: 2s;
+    z-index: 1500;
+  
+
+}
+
+li {
+    text-align: center;
+    margin-top: 30px;
+    z-index: 1500;
+}
+
+#confirm:checked ~ ul {
+    right:0 ;
+    z-index: 1000;
+}
+
+.title img{     
+    margin-top: 50px;
+}
+
+.tikuzenni{
+    margin-left: 10px;
+    font-size: 120px;
+}
 
 body{
     width:auto;
@@ -20,7 +135,8 @@ body{
 #question{
     color: #0000;
     background-color: #ffff;
-=========
+}
+
 body {
     background: #efdec1;
     font-size: 14px;
