--- a/toppage/toppage pc.css
+++ b/toppage/toppage pc.css
@@ -14,18 +14,28 @@ header {
     padding-bottom: 10px;
     
 }
+@media screen and (min-width: 480px){
+  header{
+    height: 60px;
+  }
+}
+
+
 header div{
   position: absolute;
   width: 100px;
   /* top: 1px;
   left: 1px; */
 }
+
+
 header p{
     margin-right: 15px;
-    margin-top: auto;
     margin-bottom: auto;
     width: 50px;
+    
 }
+
 input{
 
   width: 100px;
@@ -92,7 +102,7 @@ ul {
     background-color: #92c2d2;
     transition: 2s;
     z-index: 1500;
-  
+    padding-top: 50px;
 
 }
 
@@ -100,6 +110,11 @@ li {
     text-align: center;
     margin-top: 30px;
     z-index: 1500;
+}
+
+li>a{
+  text-decoration: none;
+  color: white;
 }
 
 #confirm:checked ~ ul {
@@ -112,11 +127,22 @@ title{
   
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 .title img{
-  margin-top: 50px;
+  margin-top: 60px;
 
+}
+@media screen and (min-width: 480px){
+  .title img{
+    width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+
+  }
 }
 
 .tikuzenni{
@@ -132,6 +158,12 @@ title{
   z-index: 500;
   position: relative;
   margin-bottom: 80px;
+  }
+  @media screen and (min-width: 480px){
+    .swiper{
+      width: 800px;
+  
+    }
   }
 
 .swiper-slide{
@@ -169,6 +201,11 @@ h3{
   font-weight: bold;
   
 }
+@media screen and (min-width: 480px){
+  .strong{
+    text-align-last: center;
+  }
+}
 .strong-r{
   color: white;
   text-align: center;
@@ -176,43 +213,80 @@ h3{
 .blackstrong{
 
   font-weight: bold;
+  
+}
+@media screen and (min-width: 480px){
+  .blackstrong{
+    text-align-last: center;
+  }
 }
 
 
 .reason{
+  margin-left: auto ;
+  margin-right: auto;
+  width: 100%;
 
 }
-.reason img{
-  margin-left: 20px;
-  margin-right: 20px;
-  padding-top: 20px;
-  position: absolute;
-  width: 10%;
 
-}
+
 .reasonText{
 background-color: #92c2d2;
-border-radius: 8%;
+border-radius: 10vh;
 margin: 0 auto;
 margin-left: 10px;
 margin-right: 10px;
 margin-bottom: 40px;
-display: inline-block;
+display: block;
 padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
+padding-bottom: 30px;
 font-size: 20px;
 }
+@media screen and (min-width: 480px){
+  .reasonText{
+    width: 50%;
+    margin-left: auto;
+margin-right: auto;
+    text-align-last: center;
+  }
+
+  }
+
 .reasonText p{
   text-align-last: left;
 
+}
+@media screen and (min-width: 480px){
+      .reasonText p{
+        text-align-last: center;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+    }
+
+
+
+
+.reasonText div{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto ;
+  margin-bottom: 50px;
+  width: 30%;
+}
+
+.img{
+  margin: top 30px;;
+  margin-bottom: 30px;
 }
 .asobikata{
   padding-bottom: 10px;
 }
 .asobikataText{
   background-color: #92c2d2;
-  border-radius: 10%;
+  border-radius: 10vh ;
   text-align: center;
   margin: 0 auto;
   margin-left: 10px;
@@ -221,22 +295,51 @@ margin-bottom: 40px;
 padding: 15px;
 padding-left: 10px;
 padding-right: 10px;
+padding-bottom: 30px;
+
 
 }
+@media screen and (min-width: 480px){
+  .asobikataText{
+    width: 50%;
+    margin-left: auto;
+margin-right: auto;
+    text-align-last: center;
+  }
+  }
+
+@media screen and (min-width: 480px){
+  .asobikataText{
+    padding-bottom: 40px;
+    margin-top: 40px;
+  }
+}
+
 .asobikataText p{
   text-align-last: left;
   font-size: 20px;
 
 }
+@media screen and (min-width: 480px){
+  .asobikataText p{
+    text-align-last: center;
+    margin-left: 20px;
+    margin-right: 20px;
+
+  }
+}
 
 
 footer{
   background-color: lightgray;
-  padding-top: 10px;
-  padding-bottom: 10px; 
+  padding-top: 15px;
+  padding-bottom: 15px; 
 
 }
 footer div{
   text-align: center;
   margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+
