--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,40 +1,168 @@
+/* header */
+@charset "utf-8";
+ul,
+li{
+    list-style: none;
+}
+.container{
+    width: auto;
+}
+header {
+    width: 100%;
+    display: flex;
+    position: fixed;
+    background-color: #67b4cd;
+    height: 50px;
+    z-index: 1000;
+    padding-bottom: 10px;
+    
+}
+@media screen and (min-width: 480px){
+header{
+    height: 60px;
+    width: 100%;
+  }
+}
 
+header div{
+  position: absolute;
+  width: 100px;
+  /* top: 1px;
+  left: 1px; */
+}
+
+
+header p{
+    margin-right: 15px;
+    margin-bottom: auto;
+    width: 50px;
+    
+}
+
+input{
+
+  width: 100px;
+  /* アイコンと同じサイズ */
+}
+label {
+    width: 30px;
+    height: 30px;
+    border: 1px solid  black;
+    position: absolute;
+    right:9px;
+    top: 11px;
+    z-index: 1500;
+  
+    }
+
+span {
+    width: 20px;
+    height: 1px;
+    background-color: black;
+    position: absolute;
+    right: 15px;
+    transition: .3s;
+    z-index: 1500;
+}
+
+.hum1 {
+    top: 20px;
+}
+.hum2 { 
+    top: 27px;
+}
+
+.hum3 {
+    top: 34px;
+}
+
+  /* クリックしたらばつ印になるようにする */
+#confirm:checked ~ .hum1 {
+    width: 27px;
+    transform: rotate(45deg);
+    top :27px;
+    right: 12px;
+}
+#confirm:checked ~ .hum2 {
+    display: none;
+}
+#confirm:checked ~ .hum3 {
+    width: 27px;
+    transform: rotate(-45deg);
+    top :27px;
+    right: 12px;
+}
+
+#confirm {
+    display: none;
+}
+.header_container {
+    position: absolute;
+    width: 30%;
+    height: 100vh;
+    right: -100%;
+    text-align: center;
+    background-color: #92c2d2;
+    transition: 2s;
+    z-index: 1500;
+    
+}
+#confirm:checked ~ .header_container {
+    right: 0;
+    z-index: 1000;
+}
+.header_item {
+    text-align: center;
+    margin-top: 30px;
+    z-index: 1500;
+}
+
+.header_item a{
+  text-decoration: none;
+  color: white;
+}
+
+/* body */
 body{
-    width:auto;
     background-color: #fff;
 }
 .main{
     text-align:center;
+    width: 100%;
+    padding-top: 30px;
 }
 .main img{
-    width: 50%;
-    height: 300px;
+    width: 300px;
+    height: 100%;
+    margin-top: 60px;
 }
-.container{
+@media screen and (min-width: 480px){
+    .main img{
+    width: 500px;
+    height: 100%;
+    }
+    }
+.main{
     font-size: 20px;
 }
-.container p{
-    text-align: center;
-}
-
-.container {
-    width: 400px;
+.main_container {
+    width: 90%;
     margin: 8px auto;
     background: #fff;
     border-radius: 4px;
     padding: 16px;
-    position: relative;
 }
 
 #question {
     margin-bottom: 16px;
+    text-align: center;
 }
 
 #choices {
     list-style: none;
     padding: 0;
     margin: 100px auto;
-
+    text-align: center;
 }
 
 #choices > li {
@@ -118,4 +246,22 @@ body{
 #result > a {
     display: block;
     text-decoration: none;
+}
+
+
+/* footer */
+footer{
+    background-color: lightgray;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+  
+}
+  footer div{
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
 }
