--- a/toppage/toppage.css
+++ b/toppage/toppage.css
@@ -35,7 +35,7 @@ label {
     width: 30px;
     height: 30px;
     border: 1px solid  black;
-    position: absolute;
+    position: absolute
     right:9px;
     top: 11px;
     z-index: 1500;
